test/resources/lexer/failing/UnclosedString.amy
object UnclosedString
  val a = "hello
end UnclosedString
